--- a/style.css
+++ b/style.css
@@ -6,4 +6,6 @@ h1{
 }
 i{
     color: red;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-style: normal;
 }
